fix image-grid taking extra space

--- a/src/App.scss
+++ b/src/App.scss
@@ -142,13 +142,14 @@
 			}
 
 			.image-grid-wrapper {
+				display: grid;
+				gap: 0.5rem;
+				
 				.image-grid {
 					display: grid;
 					place-items: center;
 					grid-template-columns: repeat(6, 1fr);
-					grid-template-rows: repeat(6, 1fr);
 					width: 100%;
-					aspect-ratio: 4/3;
 					gap: 0.5rem;
 	
 					.image {
